# TTS-Implementation

./: .gitignore  README.md  grad_tts_diffusion_note.tex  pyproject.toml
configs/: base.json
src/: GAI_model.ipynb  attention_research.ipynb  grad_tts_diffusion.py  inference.py  main.py  model_for_pres.ipynb  research.ipynb  train.py
src/analysis/: README.md  __init__.py  plot_results.py
src/datasets/: .gitignore  dataset_lookup.ipynb  load_dataset.ipynb  metadata.csv  metadata2.csv
src/models/: __init__.py  attentions.py  compact_speech.py  config.py  decoder.py  encoder.py  modules.py  test_decoder.py  test_encoder.py
src/monotonic_align/: __init__.py  core.c  setup.py
src/utils/: __init__.py  alignment.py  audio.py  checkpointing.py  commons.py  data.py  data_pipeline.py  helpers.py  io_paths.py  logging_utils.py  stft.py  text.py  tokenizer.py
src/utils/text/: __init__.py  symbols.py
